--- a/views/teacherDashboard.ejs
+++ b/views/teacherDashboard.ejs
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>teacher panel</h1>
+    <form action="/user/logout" method="get">
+  <button type="submit" style="padding: 6px 12px; border: none; background-color: crimson; color: white; border-radius: 8px; cursor: pointer;">
+    Logout
+  </button>
+</form>
+
 </body>
 </html>
