--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -686,3 +686,112 @@ body {
     border-radius: 50%;
     display: inline-block;
   }
+
+  .logout-btn {
+  background: #e63946;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 600;
+  margin-right: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.logout-btn:hover {
+  background: #c81e2e;
+}
+
+.delete-btn {
+  padding: 6px 12px;
+  background: #e63946;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background 0.2s ease-in-out;
+}
+
+.delete-btn:hover {
+  background: #c81e2e;
+}
+
+/* fo logs panel -------------------------------------------------------------- */ 
+
+
+.logs-panel {
+  position: fixed;
+  right: 112px;
+  top: 218px;
+  width: 320px;
+  height: 400px;
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(6px);
+  border-radius: 16px;
+  border: 1px solid #dcdcdc;
+  box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.1);
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  z-index: 999;
+}
+
+.logs-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 12px;
+  background: linear-gradient(to right, #2563eb, #4f46e5);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.logs-table-container {
+  flex: 1;
+  overflow-y: auto;
+  padding-right: 5px;
+}
+
+/* Scrollbar */
+.logs-table-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.logs-table-container::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #4f46e5, #a855f7);
+  border-radius: 8px;
+}
+
+.logs-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 13px;
+}
+
+.logs-table thead {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.logs-table th {
+  text-align: left;
+  padding: 8px;
+  font-size: 12px;
+  color: #6b7280;
+  font-weight: 600;
+}
+
+.logs-table td {
+  padding: 10px 8px;
+  color: #4b5563;
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.logs-table tr:hover {
+  background: rgba(99, 102, 241, 0.08);
+}
+
+.deleted-user {
+  font-weight: 600;
+  color: #dc2626;
+}
